--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -221,6 +221,19 @@ stages:
               # create .env.prod file
               cd $(Pipeline.Workspace)/artifacts/react #/src
               New-Item -Name '.env.prod' -Path . -ItemType File
+              
+              function Replace-Tokens
+              {
+                param(
+                  [string]$inputFile,
+                  [string]$outputFile,
+                  [string]$token,
+                  [string]$tokenValue
+                )
+
+                (Get-Content $inputFile) | foreach-object { $_ -replace $token, $tokenValue } | Set-Content $outputFile
+                Write-Host "Processed: " + $inputFile
+              }
 
               $functionName = $(infraDeployment.functionName.value)
               $apiUri = "https://$functionName.azurewebsites.net/api"
@@ -230,22 +243,13 @@ stages:
               $storageKeys = az storage account keys list --resource-group $(resourceGroupName) --name $(infraDeployment.webStorageAccountName.value) | ConvertFrom-Json
               
               # patch .env.prod file
-              $envVars = @(
-                "REACT_APP_CLIENT_ID=$(reactClientId)",
-                "REACT_APP_AUTHORITY=$(authority)",
-                "BLOB_READ_SCOPE=$($apiClientUri)/storage.blob.read",
-                "SQL_READ_WRITE_SCOPE=$($apiClientUri)/sql.db.readwrite",
-                "REACT_APP_API_ENDPOINT=$($apiUri)",
-                "REACT_APP_REDIRECT_URI=$($apiUri)",
-                "REACT_APP_POST_LOGOUT_REDIRECT_URI=$($apiUri)",
-                REACT_APP_REDIRECT_URI=$(infraDeployment.webStorageEndpoint.value),
-                REACT_APP_POST_LOGOUT_REDIRECT_URI=$(infraDeployment.webStorageEndpoint.value)
-              )
-
-              # add env vars to ./.env.prod file
-              $envVars | Foreach-Object {
-                Add-Content -Value $_ -Path ./.env.prod 
-              }
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_CLIENT_ID}' -TokenValue $(reactClientId)
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_APP_AUTHORITY}' -TokenValue $(authority)
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{BLOB_READ_SCOPE}' -TokenValue "$($apiClientUri)/storage.blob.read"
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{SQL_READ_WRITE_SCOPE}' -TokenValue "$($apiClientUri)/sql.db.readwrite"
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_APP_API_ENDPOINT}' -TokenValue $apiUri
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_APP_REDIRECT_URI}' -TokenValue $apiUri
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_APP_POST_LOGOUT_REDIRECT_URI}' -TokenValue $apiUri
             
               # build react app
               npm install env-cmd
