--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -238,13 +238,14 @@ stages:
               $functionName = $(infraDeployment.functionName.value)
               $apiUri = "https://$functionName.azurewebsites.net/api"
               $apiClientUri = "api://$(apiClientId)"
+              $aadAuthority = "https://login.microsoftonline.com/$(authority)"
 
               $webStorageAccount = az storage account  show --resource-group $(resourceGroupName) --name $(infraDeployment.webStorageAccountName.value) | ConvertFrom-Json
               $storageKeys = az storage account keys list --resource-group $(resourceGroupName) --account-name $(infraDeployment.webStorageAccountName.value) | ConvertFrom-Json
               
               # patch .env.prod file
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_CLIENT_ID}' -TokenValue $(reactClientId)
-              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_APP_AUTHORITY}' -TokenValue $(authority)
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_APP_AUTHORITY}' -TokenValue $(aadAuthority)
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{BLOB_READ_SCOPE}' -TokenValue "$($apiClientUri)/storage.blob.read"
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{SQL_READ_WRITE_SCOPE}' -TokenValue "$($apiClientUri)/sql.db.readwrite"
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REACT_APP_API_ENDPOINT}' -TokenValue $apiUri
