--- a/client/.env
+++ b/client/.env
@@ -1,9 +1,7 @@
 REACT_APP_CLIENT_ID={REACT_CLIENT_ID}
-REACT_APP_AUTHORITY={AUTHORITY}
-BLOB_READ_SCOPE={BLOB_API_CLIENT_URI}
-SQL_READ_WRITE_SCOPE={SQL_API_CLIENT_URI}
-REACT_APP_API_ENDPOINT={FUNCTION_API_URI}
-REACT_APP_REDIRECT_URI={FUNCTION_API_URI}
-REACT_APP_POST_LOGOUT_REDIRECT_URI={REACT_URI}
-REACT_APP_REDIRECT_URI={REACT_URI}
-REACT_APP_POST_LOGOUT_REDIRECT_URI={REACT_URI}
+REACT_APP_AUTHORITY={AAD_AUTHORITY}
+BLOB_READ_SCOPE={BLOB_READ_SCOPE}
+SQL_READ_WRITE_SCOPE={SQL_READ_WRITE_SCOPE}
+REACT_APP_API_ENDPOINT={BACKEND_API_ENDPOINT}
+REACT_APP_REDIRECT_URI={REDIRECT_URI}
+REACT_APP_POST_LOGOUT_REDIRECT_URI={POST_LOGOUT_REDIRECT_URI}
