--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -249,8 +249,8 @@ stages:
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{BLOB_READ_SCOPE}' -TokenValue "$($apiClientUri)/storage.blob.read"
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{SQL_READ_WRITE_SCOPE}' -TokenValue "$($apiClientUri)/sql.db.readwrite"
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{BACKEND_API_ENDPOINT}' -TokenValue $apiUri
-              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REDIRECT_URI}' -TokenValue $(infraDeployment.webStorageAccountName.value)
-              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{POST_LOGOUT_REDIRECT_URI}' -TokenValue $(infraDeployment.webStorageAccountName.value)
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{REDIRECT_URI}' -TokenValue $(infraDeployment.webStorageEndpoint.value)
+              Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -Token '{POST_LOGOUT_REDIRECT_URI}' -TokenValue $(infraDeployment.webStorageEndpoint.value)
             
               Get-Content -Path ./.env.prod
 
