added cli task for react file upload to blob storage

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -250,13 +250,13 @@ stages:
               
               # patch .env.prod file
               $tokenHash = @{
-                '{REACT_CLIENT_ID}'=$(reactClientId)
-                '{AAD_AUTHORITY}'=$(authority)
+                '{REACT_CLIENT_ID}'="$(reactClientId)"
+                '{AAD_AUTHORITY}'="$(authority)"
                 '{BLOB_READ_SCOPE}'="$($apiClientUri)/storage.blob.read"
                 '{SQL_READ_WRITE_SCOPE}'="$($apiClientUri)/sql.db.readwrite"
-                '{BACKEND_API_ENDPOINT}'=$apiUri
-                '{REDIRECT_URI}'=$(infraDeployment.webStorageEndpoint.value)
-                '{POST_LOGOUT_REDIRECT_URI}'=$(infraDeployment.webStorageEndpoint.value)
+                '{BACKEND_API_ENDPOINT}'="$apiUri"
+                '{REDIRECT_URI}'="$(infraDeployment.webStorageEndpoint.value)"
+                '{POST_LOGOUT_REDIRECT_URI}'="$(infraDeployment.webStorageEndpoint.value)"
               }
 
               Replace-Tokens -InputFile ./.env -OutputFile ./.env.prod -TokenHash $tokenHash
